SERVER-25482 Coverity analysis defect 99830: Unchecked return value